<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="com.example.knight.cricket.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ipl" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:src="@drawable/dhoni" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:src="@drawable/kohli" />
        </LinearLayout>
        <TextView
            android:id="@+id/toss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/toss_decide"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/choose_to_bat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/winner_yet_to_be_decided"
            android:textColor="#000"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/score_csk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/run_csk"
                android:textColor="#000"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/slash1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/slash_csk"
                android:textColor="#000"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/wicket_csk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/wicket_csk"
                android:textColor="#000"
                android:textSize="45sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginStart="10dp"
                android:background="#FF0000FF" />

            <TextView
                android:id="@+id/score_rcb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/score_rcb"
                android:textColor="#000"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/slash2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/slash_rcb"
                android:textColor="#000"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/wicket_rcb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/wicket_rcb"
                android:textColor="#000"
                android:textSize="45sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/Overs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/overs"
            android:textColor="#000"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team_a_overs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:text="@string/over"
                android:textColor="#000"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/dot"
                android:textColor="#000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/team_a_balls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:text="@string/balls"
                android:textColor="#000"
                android:textSize="25sp" />


            <TextView
                android:id="@+id/total_overs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="/ 5.0 Overs "
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="25sp" />
            <View
                android:layout_width="2dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginStart="10dp"
                android:background="#FF0000FF" />
            <TextView
                android:id="@+id/team_b_overs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:text="@string/over"
                android:textColor="#000"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/dot1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/dot"
                android:textColor="#000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/team_b_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:text="@string/balls"
                android:textColor="#000"
                android:textSize="25sp" />


            <TextView
                android:id="@+id/_overs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="/ 5.0 Overs "
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="25sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#000"
                android:onClick="displayTossWinner"
                android:text="@string/toss"
                android:textColor="#fff"
                android:textSize="18sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#000"
                android:text="@string/bat"
                android:textColor="#fff"
                android:textSize="18sp"
                android:onClick="add_run"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#000"
                android:onClick="rematch"
                android:text="@string/reset"
                android:textColor="#fff"
                android:textSize="18sp" />
        </LinearLayout>
            <ImageSwitcher
                android:layout_marginTop="10dp"
                android:id="@+id/image_switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ImageSwitcher>
    </LinearLayout>


</RelativeLayout>
